remaining jasmine tests are now passing

--- a/config/database.yml
+++ b/config/database.yml
@@ -9,6 +9,7 @@ development: &dev
   database: codealia_development
   pool: 5
   username: postgres
+  host: localhost
   password:
 
 # Warning: The database defined as "test" will be erased and
